# split-the-bill-client

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: flutter-ci.yml  main-ci.yml
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/eu/lab64/split_the_bill/: MainActivity.kt
android/app/src/main/res/values/: colors.xml
ios/Classes/: image_cropping.cpp  image_cropping.hpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart  routes.dart  routes.g.dart
lib/auth/: user.dart
lib/auth/data/: auth_api.dart  auth_repository.dart  auth_repository.g.dart  fake_auth_repository.dart  remote_auth_repository.dart
lib/auth/states/: auth_state.dart  auth_state.g.dart
lib/constants/: app_sizes.dart  constants.dart  test_data.dart  ui_constants.dart
lib/domain/bill/: bill.dart  bill_suggestion.dart  item.dart  item_contribution.dart
lib/domain/camera/: crop_state.dart  crop_state.g.dart
lib/domain/group/: group.dart  group_transaction.dart  transaction.dart
lib/domain/item/: item.dart
lib/infrastructure/: app_exception.dart  async_error_logger.dart  async_value_ui.dart  group_api.dart  http_client.dart  http_client.g.dart  session.dart  session.g.dart  shared_preferences.dart  shared_preferences.g.dart
lib/infrastructure/edge_detection/: edge_detection_result.dart
lib/infrastructure/image_processing/: image_cropping.cpp  image_cropping.dart  image_cropping.hpp  image_utils.dart
lib/models/: README.txt  assigned_item.dart  bill.dart  bill_mapping.dart  group.dart  item.dart  user.dart
lib/presentation/bills/: bills_screen.dart  bills_silver_list.dart  bills_sliver_list.dart
lib/presentation/camera/: bill_camera.dart  camera_screen.dart  image_util.dart  img_view.dart  rect_selection_screen.dart  selector_pivot.dart
lib/presentation/ffi/: contour_detection.cpp  contour_detection.hpp  edge_detection.dart  ffi_example.dart  monte_carlo_pi.c  monte_carlo_pi.h  mutable_memory_image.dart
lib/presentation/home/: carousel_card.dart  controllers.dart  controllers.g.dart  home_app_bar.dart  home_balance_card.dart  home_bill_carousel.dart  home_screen.dart  (+1 more)
lib/providers/: README.txt  dummy_authentication.dart  dummy_data_calls.dart
lib/router/: router.dart  router.g.dart  routes.dart  routes.g.dart
lib/screens/: README.txt
lib/utilities/: README.txt
lib/utils/: async_value_ui.dart
lib/widgets/: README.txt  addBillToGroupPopup.dart  add_bill_to_group_popup.dart  navbar.dart  popupNotification.dart  saveBillPopup.dart  save_bill_popup.dart  screen_title.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+224 files in other folders)
